results/classifier/118/graphic/1553
graphic: 0.872
files: 0.846
socket: 0.785
device: 0.779
arm: 0.777
network: 0.542
architecture: 0.512
PID: 0.480
semantic: 0.448
vnc: 0.445
TCG: 0.362
ppc: 0.328
peripherals: 0.314
debug: 0.276
mistranslation: 0.229
permissions: 0.223
VMM: 0.220
risc-v: 0.166
register: 0.157
kernel: 0.156
boot: 0.147
hypervisor: 0.131
i386: 0.098
user-level: 0.097
performance: 0.086
x86: 0.069
virtual: 0.057
assembly: 0.040
KVM: 0.023

Build error: implicit declaration of function 'qemu_close_to_socket'
Description of problem:
When build the latest master code with MSYS2 on Windows 10, GCC reports:
../ui/spice-core.c: In function 'watch_remove':
../ui/spice-core.c:152:5: error: implicit declaration of function 'qemu_close_to_socket' [-Werror=implicit-function-declaration]
  152 |     qemu_close_to_socket(watch->fd);
      |     ^~~~~~~~~~~~~~~~~~~~
../ui/spice-core.c:152:5: error: nested extern declaration of 'qemu_close_to_socket' [-Werror=nested-externs]
Steps to reproduce:
1. ./configure --enable-sdl --enable-gtk --target-list=arm-softmmu,aarch64-softmmu
2. cd build
3. make
